--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+application.jwt.secretKey=securessecuressecuressecuressecuressecures
+application.jwt.tokenPrefix=Bearer 
+application.jwt.tokenExpirationAfterDays=10
